--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
   --color-track-orange: #e9902f;
   --color-track-red: #d72529;
   --color-track-green: #27991a;
-  --color-border: #65503e;
+  --color-border: #c3ad97;
 
   /* Neumorphic colors */
   --color-shadow: rgb(176 147 116);
