--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -199,7 +199,7 @@ a {
   align-items: center;
 }
 
-/* Animations */
+/* --------------------------- Animations --------------------------- */
 
 @keyframes fade-in {
   from {
