--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,7 +163,7 @@ body.night-mode,
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 /* Neumorphic utilities */
