--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
   --color-track-red: #d72529;
   --color-track-green: #27991a;
   --color-border: rgb(176 147 116 / 0.6);
+  --color-ring: #ff7b00;
 
   /* Neumorphic colors */
   --color-shadow: rgb(176 147 116);
