--- a/src/app/styles/theme.css
+++ b/src/app/styles/theme.css
@@ -98,7 +98,7 @@
 
   /* ==================== Animation ==================== */
   --animate-duration: 150ms;
-  --animate-outline-pulse: outline-pulse 2s cubic-bezier(0.4, 0, 0.6, 1)
+  --animate-brightness-pulse: brightness-pulse 2s cubic-bezier(0.4, 0, 0.6, 1)
     infinite;
 
   /* ==================== Components: Knob ==================== */
